--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,27 @@
-.DS_Store
-node_modules
+# deps
+/node_modules
+
+# generated content
+_map.ts
+.contentlayer
+
+# test & build
+/coverage
+/.next/
+/out/
 /build
-/.svelte-kit
-/package
-.env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
-package-lock.json
+*.tsbuildinfo
+
+# misc
+.DS_Store
+*.pem
+/.pnp
+.pnp.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# others
+.env*.local
+.vercel
+next-env.d.ts
