--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^14.0.3",
+    "install": "^0.13.0",
     "next": "14.0.3",
     "next-docs-mdx": "^4.0.7",
     "next-docs-ui": "^4.0.9",
